# oh-my-pi

./: Cargo.toml  README.md  package.json
.github/actions/bun-install/: action.yml
.github/workflows/: ci.yml
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: grep.rs  lib.rs  shell.rs
crates/pi-natives/src/chunk/: edit.rs  mod.rs  render.rs  state.rs  types.rs
crates/pi-shell/: Cargo.toml
crates/pi-shell/src/: shell.rs
crates/pi-uu-grep/src/: lib.rs
crates/uu-cat-vendored/: Cargo.toml
crates/uu-find-vendored/: Cargo.toml
crates/uu-find-vendored/src/find/: mod.rs
crates/uu-find-vendored/src/find/matchers/: exec.rs
crates/uu-head-vendored/: Cargo.toml
crates/uu-ls-vendored/: Cargo.toml
crates/uu-mkdir-vendored/: Cargo.toml
crates/uu-mv-vendored/: Cargo.toml
crates/uu-rm-vendored/: Cargo.toml
crates/uu-rm-vendored/src/: rm.rs
crates/uu-sort-vendored/: Cargo.toml
crates/uu-tail-vendored/: Cargo.toml
crates/uu-uniq-vendored/: Cargo.toml
crates/uu-wc-vendored/: Cargo.toml
docs/: config-usage.md  environment-variables.md  extension-loading.md  keybindings.md  local-models.md  settings.md  slash-command-internals.md
docs/design/comms-bus-delivery/: design.md
docs/designs/platform/: sdk-lifecycle-callbacks.md
docs/tools/: refresh.md  web_search.md
