[package]
name = "pi-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
# Portions of the minimizer adapt MIT-licensed algorithms from rtk-ai/rtk.
# See NOTICE at this crate root (packaged on publish).

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
brush-builtins.workspace = true
brush-core.workspace = true
brush-parser.workspace = true
clap.workspace = true
os_pipe.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
xxhash-rust.workspace = true
pi-uutils-ctx = { path = "../pi-uutils-ctx" }
uu_mkdir = { path = "../uu-mkdir-vendored" }
uu_head = { path = "../uu-head-vendored" }
uu_sort = { path = "../uu-sort-vendored" }
uu_wc = { path = "../uu-wc-vendored" }
uu_tail = { path = "../uu-tail-vendored" }
uu_rm = { path = "../uu-rm-vendored" }
uu_mv = { path = "../uu-mv-vendored" }
uu_ls = { path = "../uu-ls-vendored" }
uu_find = { path = "../uu-find-vendored" }
pi_uu_grep = { path = "../pi-uu-grep" }
uu_cat = { path = "../uu-cat-vendored" }
uu_uniq = { path = "../uu-uniq-vendored" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
smallvec.workspace = true
windows-sys.workspace = true
winreg.workspace = true
